--- a/databootcamp-midterm.ipynb
+++ b/databootcamp-midterm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "f6434d9a",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
        "      <td>Brazil</td>\n",
        "      <td>4</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>auto racing</td>\n",
+       "      <td>nascar</td>\n",
        "      <td>1990</td>\n",
        "      <td>10.0</td>\n",
        "    </tr>\n",
@@ -89,7 +89,7 @@
        "      <td>France</td>\n",
        "      <td>5</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>auto racing</td>\n",
+       "      <td>nascar</td>\n",
        "      <td>1990</td>\n",
        "      <td>9.0</td>\n",
        "    </tr>\n",
@@ -105,15 +105,15 @@
        "3     4       Ayrton Senna      Brazil             4                NaN   \n",
        "4     5        Alain Prost      France             5                NaN   \n",
        "\n",
-       "         Sport  Year  earnings_($_million)  \n",
-       "0       boxing  1990                  28.6  \n",
-       "1       boxing  1990                  26.0  \n",
-       "2       boxing  1990                  13.0  \n",
-       "3  auto racing  1990                  10.0  \n",
-       "4  auto racing  1990                   9.0  "
+       "    Sport  Year  earnings_($_million)  \n",
+       "0  boxing  1990                  28.6  \n",
+       "1  boxing  1990                  26.0  \n",
+       "2  boxing  1990                  13.0  \n",
+       "3  nascar  1990                  10.0  \n",
+       "4  nascar  1990                   9.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,14 +125,45 @@
     "from plotnine import *\n",
     "\n",
     "df=pd.read_csv('Forbes Richest Atheletes (Forbes Richest Athletes 1990-2020).csv')\n",
+    "df = df.rename(columns={'earnings ($ million)': 'Earnings'})\n",
     "df = df.rename(columns=lambda x: x.replace(' ', '_'))\n",
+    "\n",
+    "df.loc[df['Sport'].str.contains('auto racing', case=False), 'Sport'] = 'NASCAR'\n",
+    "df.loc[df['Sport'].str.contains('f1', case=False), 'Sport'] = 'f1'\n",
+    "\n",
+    "df.Sport=df.Sport.str.lower().replace('nba','basketball')\n",
+    "\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "1302edf9",
+   "execution_count": 23,
+   "id": "be0f489a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['boxing', 'nascar', 'golf', 'basketball', 'tennis', 'nfl',\n",
+       "       'baseball', 'ice hockey', 'american football / baseball', 'f1',\n",
+       "       'hockey', 'american football', 'soccer', 'cycling',\n",
+       "       'motorcycle gp', 'mma'], dtype=object)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.Sport.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "8e12027b",
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +227,7 @@
        "      <td>USA</td>\n",
        "      <td>1</td>\n",
        "      <td>3</td>\n",
-       "      <td>Basketball</td>\n",
+       "      <td>basketball</td>\n",
        "      <td>1992</td>\n",
        "      <td>35.9</td>\n",
        "    </tr>\n",
@@ -207,7 +238,7 @@
        "      <td>USA</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>Basketball</td>\n",
+       "      <td>basketball</td>\n",
        "      <td>1993</td>\n",
        "      <td>36.0</td>\n",
        "    </tr>\n",
@@ -218,7 +249,7 @@
        "      <td>USA</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>Basketball</td>\n",
+       "      <td>basketball</td>\n",
        "      <td>1994</td>\n",
        "      <td>30.0</td>\n",
        "    </tr>\n",
@@ -237,12 +268,12 @@
        "         Sport  Year  earnings_($_million)  \n",
        "0       boxing  1990                  28.6  \n",
        "10      boxing  1991                  60.5  \n",
-       "20  Basketball  1992                  35.9  \n",
-       "30  Basketball  1993                  36.0  \n",
-       "40  Basketball  1994                  30.0  "
+       "20  basketball  1992                  35.9  \n",
+       "30  basketball  1993                  36.0  \n",
+       "40  basketball  1994                  30.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e22b01aa",
+   "id": "6e6691a4",
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87c77c70",
+   "id": "c26238ff",
    "metadata": {},
    "outputs": [],
    "source": []
