adjusted sport in col 52

--- a/databootcamp-midterm.ipynb
+++ b/databootcamp-midterm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "cc3a6b11",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "f6434d9a",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
        "4  nascar  1990       9.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,9 +142,37 @@
     "\n",
     "df.Sport=df.Sport.str.lower().replace('nba','basketball')\n",
     "\n",
+    "df.loc[df['Name']=='Deion Sanders','Sport'] = 'baseball'\n",
+    "\n",
     "df.columns = df.columns.str.lower()\n",
     "\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4260479c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    s.no           name nationality  current_rank previous_year_rank  \\\n",
+      "51    52     Mike Tyson         USA             2         not ranked   \n",
+      "52    53  Deion Sanders         USA             3                 38   \n",
+      "53    54   Riddick Bowe         USA             4         not ranked   \n",
+      "\n",
+      "       sport  year  earnings  \n",
+      "51    boxing  1995      40.0  \n",
+      "52  baseball  1995      22.5  \n",
+      "53    boxing  1995      22.2  \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df[51:54])"
    ]
   },
   {
