--- a/Nathan_Portion.ipynb
+++ b/Nathan_Portion.ipynb
@@ -9,13 +9,16 @@
     "\n",
     "Hypotheses:\n",
     "1.  How the diversification of countries have changed over time\n",
+    "<br><span style=\"color:red\"><b>Uncompleted</b></span>\n",
     "2. Which sports have which nationalities and nationality density\n",
-    "3. Which countries are bringing in the percentage of earnings over time"
+    "<br><span style=\"color:green\"><b>Completed</b></span>\n",
+    "3. Which countries are bringing in the percentage of earnings over time\n",
+    "<br><span style=\"color:green\"><b>Completed</b></span>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 192,
    "id": "f55f0093-3b52-4d58-80fe-492c8ec4e5dc",
    "metadata": {},
    "outputs": [
@@ -126,7 +129,7 @@
        "4  racing  1990       9.0  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
