--- a/Nathan_Portion.ipynb
+++ b/Nathan_Portion.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Hypotheses:\n",
     "1.  How the diversification of countries have changed over time\n",
-    "<br><span style=\"color:red\"><b>Uncompleted</b></span>\n",
+    "<br><span style=\"color:green\"><b>Completed</b></span>\n",
     "2. Which sports have which nationalities and nationality density\n",
     "<br><span style=\"color:green\"><b>Completed</b></span>\n",
     "3. Which countries are bringing in the percentage of earnings over time\n",
