--- a/Nathan_Portion.ipynb
+++ b/Nathan_Portion.ipynb
@@ -9,11 +9,11 @@
     "\n",
     "Hypotheses:\n",
     "1.  How the diversification of countries have changed over time\n",
-    "<br><span style=\"color:green\"><b>Completed</b></span>\n",
+    "<span style=\"color:green\"><b>Completed</b></span><br>",
     "2. Which sports have which nationalities and nationality density\n",
-    "<br><span style=\"color:green\"><b>Completed</b></span>\n",
+    "<span style=\"color:green\"><b>Completed</b></span><br>",
     "3. Which countries are bringing in the percentage of earnings over time\n",
-    "<br><span style=\"color:green\"><b>Completed</b></span>"
+    "<span style=\"color:green\"><b>Completed</b></span><br>"
    ]
   },
   {
